--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/svg+xml" href="/images/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Manage Landing</title>
   </head>
   <body>
-    Pricing Product About Us Careers Community Get Started Bring everyone
+    <!-- Bring everyone
     together to build better products. Manage makes it simple for software teams
     to plan day-to-day tasks while keeping the larger team goals in view. Get
     Started What’s different about Manage? Manage provides all the functionality
@@ -32,7 +39,7 @@
     keeps the whole team in-sync without being intrusive.” Get Started Simplify
     how your team works today. Get Started Home Pricing Products About Us
     Careers Community Privacy Policy Updates in your inbox… Go Copyright 2020.
-    All Rights Reserved
+    All Rights Reserved -->
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
