feat (Charts): added charts component; refactor (StartedButton, handleStart): extract handleStart func for "get started" buttons and create typed StartedButton component; feat(Header): button changed to custom StartedButton component

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <title>Manage Landing</title>
   </head>
   <body>
-    <!-- Bring everyone
-    together to build better products. Manage makes it simple for software teams
-    to plan day-to-day tasks while keeping the larger team goals in view. Get
+    <!--   Get
     Started What’s different about Manage? Manage provides all the functionality
     your team needs, without the complexity. Our software is tailor-made for
     modern digital product teams. 01 Track company-wide progress See how your
